--- a/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
+++ b/src/app/modules/resorts/vanavihari-maredumilli/vanavihari-maredumilli.component.html
@@ -76,7 +76,7 @@
               </div>
               <div class="d-flex justify-content-between pb-2">
                 <span>
-                  <mat-form-field appearance="outline">
+                  <mat-form-field appearance="outline" class="mat-small">
                     <mat-label>No. of. Guests</mat-label>
                     <mat-select required [(ngModel)]="selected" >
                     <mat-option value="one">1</mat-option>
@@ -89,27 +89,38 @@
                   
                 </span>
               </div>
-            </div>
-             -->
+            </div> -->
+            
             <!-- Booking Summary section -->
             <div class="booking-summary-bar bg-white text-dark rounded-3 p-3">
               <h4 class="m-0 pb-1 font-weight-bold">Booking Summary</h4>
               <div class="border-top py-2" *ngIf="showBookingSummary; else noBookings">
-                <h5 class="text-primary-dark pb-1 m-0"><strong class="me-2">Hill Top Guest House</strong></h5>
+                <!-- <h5 class="text-primary-dark pb-1 m-0"><strong class="me-2">Hill Top Guest House</strong></h5> -->
                 <div class="pt-2" *ngFor="let roomId of roomIds">
                   <a href="javascript:void(0)" class="float-end" (click)="removeRoom(roomId, roomId.id)"><i class="fa fa-trash"></i></a>
                   <div>
                     <strong class="me-2">Room Name: {{ roomId.name }}</strong>
                   </div>
-                  <div>
-                    <label for="checkextraguest{{roomId.id}}"><input type="checkbox" #checkextraguest id="checkextraguest{{roomId.id}}" [id]="'checkextraguest' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguest)" [(ngModel)]="roomId.noof_guest"> Check any extra guest</label> &nbsp;
-                    <input type="number" value="{{roomId.noof_guest}}" min="1" max="{{roomId.max_guest}}" #checkextraguestcount id="checkextraguestcount{{roomId.id}}" class="w-auto text-center" [id]="'checkextraguestcount' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguestcount)" *ngIf="roomId.noof_guest>0&&roomId.max_guest>1">
-                  </div>
                   <small>
-                      {{ roomId.noof_adult }} Guest{{ roomId.noof_adult>1?'s':'' }}
-                      {{ roomId.noof_guest>0?', '+roomId.noof_guest+' Extra Guest'+(roomId.noof_guest>1?'s':''):'' }}
-                      <span class="float-end pb-0 m-0">{{ roomId.week_day_rate+(roomId.week_day_bed_charge*roomId.noof_guest) | currency:'INR':'symbol':'1.2-2' }}</span>
+                      <!-- {{ roomId.noof_adult }} Guest{{ roomId.noof_adult>1?'s':'' }}
+                      {{ roomId.noof_guest>0?', '+roomId.noof_guest+' Extra Guest'+(roomId.noof_guest>1?'s':''):'' }} -->
+                      Total Room Charges: <span class="float-end pb-0 m-0">{{ roomId.week_day_rate+(roomId.week_day_bed_charge*roomId.noof_guest) | currency:'INR ':'symbol':'1.2-2' }}</span>
                   </small>
+                  <div>
+                      <span>
+                        <mat-form-field appearance="outline" class="mat-small">
+                          <mat-label>No. of. Guests</mat-label>
+                          <mat-select required [(ngModel)]="roomId.id" >
+                          <mat-option value="one">1</mat-option>
+                          <mat-option value="two">2</mat-option>
+                          <mat-option value="three">3</mat-option>
+                          </mat-select> 
+                          <mat-hint>Adults/Child over 5 yrs</mat-hint>
+                        </mat-form-field>
+                      </span>
+                    <!-- <label for="checkextraguest{{roomId.id}}"><input type="checkbox" #checkextraguest id="checkextraguest{{roomId.id}}" [id]="'checkextraguest' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguest)" [(ngModel)]="roomId.noof_guest"> Check any extra guest</label> &nbsp;
+                    <input type="number" value="{{roomId.noof_guest}}" min="1" max="{{roomId.max_guest}}" #checkextraguestcount id="checkextraguestcount{{roomId.id}}" class="w-auto text-center" [id]="'checkextraguestcount' + roomId.id" (change)="checkExtraGuest(roomId, roomId.id, checkextraguestcount)" *ngIf="roomId.noof_guest>0&&roomId.max_guest>1"> -->
+                  </div>
                 </div>
               </div>
               <hr/>
@@ -155,8 +166,8 @@
               <p>Loading rooms...</p>
             </div>
           </ng-template>
-<!-- 
-          <div class="card1 mb-3 p-1">
+
+          <!-- <div class="card1 mb-3 p-1">
             <div class="row g-0 d-flex ">
               <div class="col-md-4">
                 <img src="/assets/img/jungle.jpeg" alt="resort image">
@@ -225,9 +236,9 @@
                       <mat-checkbox [(ngModel)]="isChecked">Extra adult/child over 5</mat-checkbox> -->
                   </div>
                   <div class="col-md-4 text-end">
-                    <h6 class="p-0 m-0"><strong>{{ room.week_day_rate | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></h6>
+                    <h6 class="p-0 m-0"><strong>{{ room.week_day_rate | currency: 'INR ': true: '1.2-2' }} + gst @ 12%</strong></h6>
                     <small>(for {{ room.max_adult }} guests)</small>
-                    <div><strong>{{ room.week_day_bed_charge | currency: 'INR': true: '1.2-2' }} + gst @ 12%</strong></div>
+                    <div><strong>{{ room.week_day_bed_charge | currency: 'INR ': true: '1.2-2' }} + gst @ 12%</strong></div>
                     <small>(for 1 Extra Bed)</small>
                   </div>
                   <div class="col-md-12">
