Removed sidebar and placed it in footer

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -132,9 +132,9 @@
                   outside reveals a heavenly experience.
                 </p>
               </div>
-              <div class="card-footer d-grid place-items-center border-0 bg-transparent">
+              <!-- <div class="card-footer d-grid place-items-center border-0 bg-transparent">
                 <button mat-raised-button color="primary" (click)="goToVanavihari()">View details</button>
-              </div>
+              </div> -->
             </div>
           <!-- </div> -->
           <!-- <div class="col-md-4 mt-3 mt-md-0"> -->
@@ -153,9 +153,9 @@
                   promising an unforgettable stay in nature.
                 </p>
               </div>
-              <div class="card-footer d-grid place-items-center border-0 bg-transparent">
+              <!-- <div class="card-footer d-grid place-items-center border-0 bg-transparent">
                 <button mat-raised-button color="primary" (click)="goToJungleStar()">View details</button>
-              </div>
+              </div> -->
             </div>
           <!-- </div> -->
         </div>
