--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -85,8 +85,9 @@
     </section>
     <section class="my-5">
       <div class="container">
-        <h2 class="text-center mb-4">Search room availability</h2>
-        <app-search-resort></app-search-resort>
+        <h2 class="text-center mb-4">Reserve a room</h2>
+        <iframe height='500px' width='100%' frameborder='0' allowTransparency='true' scrolling='auto' src='https://creatorapp.zohopublic.com/vanavihari/vanavihari/form-embed/Public_Reservation/dNOFZwsUghK4EGRV7pan5PPffkR6sEmnJ1Svt9fZ0fz7UwWJyYCWy4Rwh2TQF5k23RTBWf5vEfgYGN8eRw2Vn6KdB8NpUNk0GJRu'></iframe>
+        <!-- <app-search-resort></app-search-resort> -->
       </div>
     </section>
     <section class="about py-5">
