iframe and terms

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -83,13 +83,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </section>
-    <section class="my-5">
-      <div class="container">
-        <h2 class="text-center mb-4">Reserve a room</h2>
-        <iframe height='500px' width='100%' frameborder='0' allowTransparency='true' scrolling='auto' src='https://creatorapp.zohopublic.com/vanavihari/vanavihari/form-embed/Public_Reservation/dNOFZwsUghK4EGRV7pan5PPffkR6sEmnJ1Svt9fZ0fz7UwWJyYCWy4Rwh2TQF5k23RTBWf5vEfgYGN8eRw2Vn6KdB8NpUNk0GJRu'></iframe>
-        <!-- <app-search-resort></app-search-resort> -->
-      </div>
-    </section>
+    
     <section class="about py-5">
       <div class="container">
         <h2 class="text-center">Get to know about Vanavihari</h2>
@@ -160,6 +154,152 @@
             </div>
           <!-- </div> -->
         </div>
+      </div>
+    </section>
+    <!-- public reservation form -->
+    <section class="my-5">
+
+  <div class="container mt-3">
+    <h1>Terms and Conditions</h1>
+    <hr>
+
+    <div class="accordion mb-3" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            1. Booking and Reservation
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <ul>
+              <li>All bookings are contingent upon availability.</li>
+              <li>Reservation confirmation necessitates a valid Government ID.</li>
+              <li>Room bookings are non-transferable; reservations are exclusive to the original booker or group.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwo">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            2. Food & Extra guest Tariff Information
+          </button>
+        </h2>
+        <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th scope="col">Resort Name</th>
+                  <th scope="col">Food Included</th>
+                  <th scope="col">Guests included in room tariff</th>
+                  <th scope="col">Extra guest</th>
+                  <th scope="col">Day</th>
+                  <th scope="col">Extra Guest Tariff</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Jungle Star Eco Camp</td>
+                  <td>Yes</td>
+                  <td>2</td>
+                  <td>1</td>
+                  <td>Weekday</td>
+                  <td>₹ 1500/-</td>
+                </tr>
+                <tr>
+                  <td>Vanavihari</td>
+                  <td>No</td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td>Weekday</td>
+                  <td>₹ 500/-</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <p>**Notes:**</p>
+            <ul>
+              <li>Room service is not available.</li>
+              <li>Children aged up to 5 years stay free of charge.</li>
+              <li>Children above 5 years will be charged at the standard rate.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            3. Payment and Pricing
+          </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>Prices are subject to change without prior notice
+ <p>Full payment is required upon check-in, with accepted modes including cash, credit & debit cards, UPI, etc.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFour">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+            4. Cancellation and Refund
+          </button>
+        </h2>
+        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <div class="table-responsive">
+              <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Cancellation Timeframe</th>
+                    <th scope="col">Refund Percentage</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>48 to 72 hours prior</td>
+                    <td>90%</td>
+                  </tr>
+                  <tr>
+                    <td>24 to 48 hours prior</td>
+                    <td>80%</td>
+                  </tr>
+                  <tr>
+                    <td>Within 24 hours</td>
+                    <td>No Refund</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingTwelve">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwelve" aria-expanded="false" aria-controls="collapseTwelve">
+            12. Dispute Resolution
+          </button>
+        </h2>
+        <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <p>The decision of the Divisional Forest Officer is final in case of any disputes.</p>
+            <p>Violations of the A.P. Forest Act 1967 and Wildlife Protection Act 1972 will be subject to charges as per the Acts.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+      <div class="container">
+        <h2 class="text-center mb-4">Reserve a room</h2>
+        <iframe height='1000px' width='100%' frameborder='0' allowTransparency='true' scrolling='auto' src='https://creatorapp.zohopublic.com/vanavihari/vanavihari/form-embed/Public_Reservation/dNOFZwsUghK4EGRV7pan5PPffkR6sEmnJ1Svt9fZ0fz7UwWJyYCWy4Rwh2TQF5k23RTBWf5vEfgYGN8eRw2Vn6KdB8NpUNk0GJRu'></iframe>
+        <!-- <app-search-resort></app-search-resort> -->
       </div>
     </section>
     <!-- section for resorts -->
