--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -162,7 +162,7 @@
           <!-- <li><a class="text-decoration-none" (click)="goToAboutUs()">About us</a></li> -->
           <li class="mt-2"><a class="" (click)="goToAboutUs()">About Us</a></li>
           <li class="mt-2"><a class="" (click)="goToTribalPg()">Tribal Community</a></li>
-          <li class="mt-2"><a class="" (click)="goToAwards()">Awards and News</a></li>
+          <!-- <li class="mt-2"><a class="" (click)="goToAwards()">Awards and News</a></li> -->
           <li class="mt-2"><a class="" (click)="goToPrivacy()">Privacy Policy</a></li>
           <li class="mt-2"><a class="" (click)="goToTerms()">Terms and Conditions</a></li>
         </ul>
