--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -6,11 +6,15 @@
         <img src="assets/img/logo-vana.png" alt="logo-vana">
       </a>
       <ul class="navbar-nav d-flex flex-row gap-2 gap-lg-3">
-        <li class="nav-item" *ngIf="!isLoggedIn()">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">
             <i class="fa-solid fa-home me-2"></i>Home </a>
         </li>
-        <li class="nav-item dropdown d-none d-lg-block">
+        <li class="nav-item">
+          <a class="nav-link" href="https://creatorapp.zohopublic.com/vanavihari/vanavihari/form-perma/Public_Reservation/fNQrg5GWBF0uEXkUKGjfKED3zg3a8WR1PhGzNpuYgE2HTRFSbqnzV0HbKfK79huA47Wt3TYmUBfYutqN57pf4RPwWYywnNOuEeyP" target="_blank" link="no-referrer">
+            <i class="fa-solid fa-hotel me-2"></i>Book Resort</a>
+        </li>
+        <li class="nav-item dropdown d-none">
           <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <i class="fa-solid fa-hotel me-2"></i>Book Resort
@@ -217,6 +221,17 @@
           </button>
         </form>
       </div> -->
+    </div>
+  </div>
+</footer>
+<footer class="bottom-footer mt-auto py-3">
+  <div class="container ">
+    <div class="row justify-content-center justify-content-md-between">
+      <span class="col-auto">&copy; 2024 VANAVIHARI</span>
+      <span class="col-auto mt-2 mt-sm-0">Made with love <i class="fas fa-heart"></i> by <a class="text-decoration-none" href="https://tensketch.com/" target="_blank" link="no-referrer">
+        TenSketch
+     </a></span>
+      
     </div>
   </div>
 </footer>
