--- a/src/scss/base/_colors.scss
+++ b/src/scss/base/_colors.scss
@@ -1,11 +1,12 @@
 // primary colors
 $hue-primary: 90;
 $saturation-primary: 100%;
-$lightness-primary: 10%;
+$lightness-primary: 30%;
 
 $clr-primary: hsl(90, 100%, 30%); //4d9900
 $clr-primary-dark: hsl(90, 100%, 20%);
 $clr-primary-light: hsl(90, 100%, 70%);
+$clr-primary-lighter: hsl(90, 100%, 80%);
 
 // secondary colors
 $hue-secondary: 15;
